--- a/_config.yml
+++ b/_config.yml
@@ -96,5 +96,8 @@ disqus_show_comment_count: true
 # Google Analytics
 google_analytics_tracking_id:
 
+# Yandex Metrika
+yandex_metrika_id: 22501747
+
 # Facebook Like
 facebook_like: true
