--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://cutalion.github.io
 title: Alexative Blog
 subtitle: Notes from Alex's life and work
-author: Alex G
+author: Alexander Glushkov
 simple_search: http://google.com/search
 description: 
 
