Change blog domain

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://cutalion.github.io
+url: http://blg.ctln.pw
 title: Alexative Blog
 subtitle: Notes from Alex's life and work
 author: Alexander Glushkov
