HTTP (no S) URL to ctln.pw

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: cutalion@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://blg.ctln.pw" # the base hostname & protocol for your site
-main_domain: "ctln.pw"
+main_url: "http://ctln.pw"
 twitter_username: cutalion
 github_username:  cutalion
 
